_assets/stylesheets/main.scss
// Frameworks
// ================================================================================================
@import "bootstrap";

// Mixins
// ================================================================================================
@import "mixins/nice-underline";

// Components
// ================================================================================================
@import "components/hyphens";
@import "components/tutti-frutti";

// Elements
// ================================================================================================
@import "elements/header";
@import "elements/intro";
@import "elements/post";


// Simple Customizations
// ================================================================================================

// Turbolinks Progress Bar
html.turbolinks-progress-bar::before {
  background-color: $brand-danger !important;
  height: 1px !important;
}

// Extra-wide container for certain pages
.container-wide {
  @media(min-width: $screen-lg-min) {
    width: $container-lg * 1.5;
  }
}

// Underline links in text
p, ul:not([class~="nav"]) {
  a { @include nice-underline(6px); }
}

// Blockquote spacing
blockquote {
  padding-top: 0;
  padding-bottom: 0;
}

// Footer
footer {
  margin-top: 6em;
}

// Self portrait
.mister-ridlen {
  text-align: center;
  margin: 3em 0 4em;
}

// Remove border from pager buttons
.pager {
  margin-bottom: -4em;
  margin-top: 3em;

  & li > a {
    border: none;
  }
}

